--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "node-bin-setup": "^1.1.3",
     "sharp": "^0.33.2"
   },
-  "description": ""
+  "description": "",
+  "scripts": {
+  "start": "node server.js"
+}
 }
