--- a/package.json
+++ b/package.json
@@ -22,8 +22,5 @@
     "node-bin-setup": "^1.1.3",
     "sharp": "^0.33.2"
   },
-  "description": "",
-  "scripts": {
-  "start": "node server.js"
-}
+  "description": ""
 }
